# staff-list-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy-pages.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: A4Page.tsx  DropZone.tsx  EditableTitle.tsx  EditorPanel.tsx  PagesPanel.tsx  PrintPreview.tsx  StaffCard.tsx  Toolbar.tsx
src/i18n/: locale.ts  translations.ts
src/lib/: date.ts  documentFactory.ts  filenameParsing.ts  imageProcessing.ts  layoutConstants.ts  pagination.ts  slmFile.ts  staffSorting.ts
src/state/: documentStore.ts
src/styles/: index.css  print.css
src/test/: filenameParsing.test.ts  locale.test.ts  pagination.test.ts  slmFile.test.ts
src/types/: document.ts
src/utils/: imageCache.ts  pdfGenerator.ts
